# sdl2-shoot-em-up

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README
data/: highscores.txt
inc/: app.h  background.h  bullet.h  collision_manager.h  defs.h.in  effect_manager.h  enemy.h  enemy_bullet.h  entity.h  hud.h  input_manager.h  log.h  main.h  player.h  sdl_wrappers.h  shootem_math.h  sound_manager.h  star.h  string_utils.h  texture_manager.h  timer_manager.h  world.h
inc/effects/: background.h  debris.h  effect.h  effect_manager.h  explosion.h  star.h
inc/entities/: bullet.h  enemy.h  enemy_bullet.h  entity.h  player.h  points.h
inc/scenes/: game_scene.h  highscore_scene.h  scene.h  scene_manager.h
src/: app.cpp  background.cpp  bullet.cpp  collision_manager.cpp  effect_manager.cpp  enemy.cpp  enemy_bullet.cpp  entity.cpp  hud.cpp  input_manager.cpp  log.cpp  main.cpp  player.cpp  sdl_wrappers.cpp  shootem_math.cpp  sound_manager.cpp  star.cpp  string_utils.cpp  texture_manager.cpp  timer_manager.cpp  world.cpp
src/effects/: background.cpp  debris.cpp  effect_manager.cpp  explosion.cpp  star.cpp
src/entities/: bullet.cpp  enemy.cpp  enemy_bullet.cpp  entity.cpp  player.cpp  points.cpp
src/scenes/: game_scene.cpp  highscore_scene.cpp  scene.cpp  scene_manager.cpp
